--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.2.5",
+    "@vueuse/integrations": "^12.4.0",
     "autoprefixer": "^10.4.20",
+    "focus-trap": "^7.6.4",
     "normalize.css": "^8.0.1",
     "nuxt": "^3.15.0",
     "primevue": "^4.2.5",
