--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@primevue/forms": "^4.2.5",
     "@primevue/themes": "^4.2.5",
     "@vueuse/integrations": "^12.4.0",
     "autoprefixer": "^10.4.20",
@@ -18,11 +19,13 @@
     "nuxt": "^3.15.0",
     "primevue": "^4.2.5",
     "vue": "latest",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@nuxt/fonts": "^0.10.3",
     "@nuxt/image": "^1.8.1",
+    "@nuxtjs/html-validator": "^1.8.2",
     "@pinia/nuxt": "^0.9.0",
     "@primevue/nuxt-module": "^4.2.5",
     "@vueuse/nuxt": "^12.3.0",
