--- a/package.json
+++ b/package.json
@@ -7,25 +7,27 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@nuxt/eslint": "^0.7.5",
     "@primevue/forms": "^4.2.5",
     "@primevue/themes": "^4.2.5",
     "@vueuse/integrations": "^12.4.0",
     "autoprefixer": "^10.4.20",
+    "eslint": "^9.18.0",
     "focus-trap": "^7.6.4",
     "normalize.css": "^8.0.1",
-    "nuxt": "^3.15.0",
+    "nuxt": "^3.15.2",
     "primevue": "^4.2.5",
     "vue": "latest",
     "vue-router": "^4.5.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@nuxt/fonts": "^0.10.3",
     "@nuxt/image": "^1.8.1",
-    "@nuxtjs/html-validator": "^1.8.2",
     "@pinia/nuxt": "^0.9.0",
     "@primevue/nuxt-module": "^4.2.5",
     "@vueuse/nuxt": "^12.3.0",
