--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@nuxt/fonts": "^0.10.3",
     "@nuxt/image": "^1.8.1",
     "@pinia/nuxt": "^0.9.0",
     "@primevue/nuxt-module": "^4.2.5",
-    "@vueuse/nuxt": "^12.3.0",
+    "@vueuse/nuxt": "^12.5.0",
     "sass-embedded": "^1.83.1"
   }
 }
